Added Context to Verifiable Credential