@@ -1,5 +1,6 @@
 package org.eclipse.tractusx.ssi.extensions.core.proof;
 
+import lombok.SneakyThrows;
 import org.bouncycastle.math.ec.rfc8032.Ed25519;
 import org.eclipse.tractusx.ssi.extensions.core.proof.hash.LinkedDataHasher;
 import org.eclipse.tractusx.ssi.extensions.core.proof.transform.LinkedDataTransformer;
@@ -18,6 +19,7 @@ import org.junit.jupiter.api.Test;
 
 import java.net.URI;
 import java.security.SecureRandom;
+import java.util.Arrays;
 import java.util.Date;
 import java.util.List;
 
@@ -69,16 +71,17 @@ public class LinkedDataProofValidationComponentTest {
     Assertions.assertTrue(isOk);
   }
 
+  @SneakyThrows
   private VerifiableCredential createCredential(Ed25519Proof proof) {
     return VerifiableCredential.builder()
-        .id(URI.create("did:test:id"))
-        .types(List.of(VerifiableCredentialType.VERIFIABLE_CREDENTIAL))
-        //.holder(URI.create("did:test:holder")) // holder not mapped currently
-        .issuer(DID_TEST_OPERATOR.toUri())
-        .expirationDate(new Date(2025, 1, 1))
-        .issuanceDate(new Date(2020, 1, 1))
-        .proof(proof)
-        .credentialStatus(null)
-        .build();
+            .id(URI.create("did:test:id"))
+            .types(List.of(VerifiableCredentialType.VERIFIABLE_CREDENTIAL))
+            .issuer(DID_TEST_OPERATOR.toUri())
+            .contexts(Arrays.asList(new URI("someUri")))
+            .expirationDate(new Date(2025, 1, 1))
+            .issuanceDate(new Date(2020, 1, 1))
+            .proof(proof)
+            .credentialStatus(null)
+            .build();
   }
 }
